@@ -1,5 +1,8 @@
 # 歷史更新 History Update
 
+* 20230429 Update
+  * 調整 LineBot大小寫導致判斷問題
+
 * 20230428 Update
   * 加入 LineBot判斷邀請網址
   * 更新 165反詐騙公告網址(112/4/18-112/4/24民眾通報假投資(博弈)詐騙網站)
